--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   get: ^4.6.5
   flutter_screenutil: ^5.3.1
   percent_indicator: ^4.2.3
+  shared_preferences: ^2.0.11
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
