--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_screenutil: ^5.3.1
   percent_indicator: ^4.2.3
   shared_preferences: ^2.0.11
+  dots_indicator: 2.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
