--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   percent_indicator: ^4.2.3
   shared_preferences: ^2.0.11
   dots_indicator: 2.0.0
+  carousel_slider: ^4.2.1
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -67,6 +69,7 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
