--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   fl_chart: ^0.66.2
   bottom_picker: ^2.4.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
